--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,7 @@ body{
     font-size: 16px;
     background-color: var(--main-color) ;
 }
-
-/*якщо є нормалайз 
-* {
-    box-sizing: border-box;
-}
-зірочку не пишемо*/
+/*якщо є нормалайз {box-sizing: border-box;}зірочку не пишемо*/
 p, h1, h2, h3, h4 {
     margin:0;
 }
@@ -30,7 +25,6 @@ img {
     width: 100%;
     height: auto;
     max-width: 100%;
-
 }
 /*скинути крапки у списках ліст*/
 .list {
@@ -43,7 +37,6 @@ ul {
     padding-left: o;
 }
 
-
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -51,7 +44,6 @@ ul {
     margin: -1px;
     border: 0;
     padding: 0;
-
     white-space: nowrap;
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
@@ -61,7 +53,13 @@ ul {
 .link {
     text-decoration: none;
 }
-
+.container {
+    /* / width: 1158px;*/ 
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+}
+/*   HEADER   */
 .header {
     padding-top: 24px;
     padding-bottom: 24px;
@@ -95,8 +93,6 @@ ul {
 .navigation-item {
     margin-right: 40px;
     margin-left: auto;
-    
-   /* border: 2px solid tomato;*/
 }
 .navigation-item:last-child {
     margin-right: 0;
@@ -107,7 +103,6 @@ ul {
     color:var(--maintext-color);
     position: relative;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .navigation-link:hover,
@@ -120,7 +115,6 @@ ul {
 }
 
 .navigation-contacts{
-   /* border: 2px solid tomato;*/
    display: flex;
    margin-right: 20px; 
 }
@@ -141,7 +135,7 @@ ul {
 .contact-adress:focus {
     color: var(--btn-navigation);
 }
-@media  screen and (min-width: 428px ) {
+/* @media  screen and (min-width: 428px ) {
     .container {
         width: 428px;
         padding-right: 15px;
@@ -156,8 +150,8 @@ ul {
     }
     .contacts {
         display:none;
-    }
-}
+    } 
+}*/
 /* фокус для таба на интерактинвные элементы)*/
 /* Main */
 /* Section hero*/
@@ -168,6 +162,30 @@ ul {
     text-align: center;
     padding-top:188px  ;
     padding-bottom: 188px; 
+    
+}
+@media screen and (min-width:420px){
+    .container {
+        /* width: 100%; */
+    }
+    .hero-main {
+        padding-top: 120px;
+    padding-left: 56px;
+    padding-right: 54px;
+    padding-bottom: 112px;
+    }
+
+    .hero-text {
+        font-size: 36px;
+    }
+}
+@media  screen and  (min-width: 768px) {
+ .container {
+    width: 768px;
+ }
+ .hero-main {
+    padding: 112px 137px;
+ }
 }
 
 .hero-text {
@@ -210,13 +228,11 @@ ul {
    /*transition-property: background-color;
     transition-duration: 250ms; 
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);*/ 
-    
 }
 
 .hero-buttom:hover,
 .hero-buttom:focus {
     background-color: var(--btn-navigation);
-
 }
 
 /* Section tefnology*/
@@ -257,7 +273,7 @@ ul {
 .tehnology-item:last-child {
     margin-right: 0;
 }
-@media screen and (min-width:320px) {
+ @media screen and (min-width:420px)  {
 .container {
         width: 428px;
     }
@@ -272,7 +288,7 @@ ul {
         font-size: 36px;
         text-align: center;
     }
-
+        
 }
 @media screen and (min-width: 768px) {
     .container {
@@ -297,6 +313,7 @@ ul {
         font-size: 36px;
         text-align: start;
     }
+    
 
 }
 @media screen and (min-width: 1200px){
@@ -322,7 +339,7 @@ ul {
     .tehnology-text {
         font-weight: 500;
         font-size: 20px;
-    }
+    } 
 }
 
 /* section work*/
@@ -335,7 +352,8 @@ ul {
 }
 
 .work-maintext,
- .about-maintext {
+ .about-maintext,
+ .customers-maintext {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
@@ -389,8 +407,8 @@ ul {
 
 .about {
     background: var(--lightgray-color);
-    padding-bottom: 120px;
-    padding-top: 120px;
+     padding-bottom: 128px;
+    padding-top: 96px;
 }
 
 .about-maintext {
@@ -398,11 +416,13 @@ ul {
 }
 
 .about-list {
-    display: flex;
+    /* display: flex; */
+   
 }
 
 .about-item {
-    margin-right: 24px;
+    /* margin-right: 24px;  */
+    margin-bottom: 72px;
     background:var(--main-color);
     text-align: center;
     border-radius: 0px 0px 4px 4px;
@@ -417,6 +437,12 @@ ul {
     font-weight: 400;
     color: var(--gray-color);
     margin-bottom: 8px;
+}
+.card {
+    padding-bottom: 32px;
+    padding-top: 32px;
+    margin: 0 auto;
+   
 }
 
 /* Footer */
@@ -564,24 +590,14 @@ ul {
 }
 /**flexbox**/
 
- .container {
-   /* width: 1158px;*/
-    padding-left: 15px;
-    padding-right: 15px;
-    margin: 0 auto;
- }
+ 
 
  .main-nav {
     display: flex;
     align-items: center;
     justify-content: center;
  }
- .card { 
-    padding-bottom: 32px ;
-    padding-top: 32px; 
-
- }
-
+ 
  /* Fon */
 
  .overlay{
@@ -595,8 +611,20 @@ ul {
     background-repeat: no-repeat;
     background-size: cover;
     background-position:  center;
+}
 
- }
+@media screen and (min-width:768px){
+    .overlay {
+            background-image: var(--linear-gradient),
+                url(../images/people-office.jpg);
+        }
+}
+@media screen and (min-width: 1200px) {
+    .overlay {
+        background-image: var(--linear-gradient),
+            url(../images/people-office.jpg);}
+}
+
 /* в єлементе до  контента. афтер после контенка*/
  .buttom::before {
     display: flex;
@@ -609,7 +637,7 @@ ul {
     cursor: pointer;
  }
  
- /*.tehnology-item::before {
+ .tehnology-item::before {
     margin-bottom: 8px;
     display: block;
     content: '';
@@ -623,7 +651,7 @@ ul {
   
     background-repeat: no-repeat;
     background-position: center;
-}*/
+}
 .icon-stategy::before {
     background-image: url(../images/antenna.svg);
 }
@@ -694,21 +722,22 @@ ul {
   .teamsoc-link:focus {
     background: var(--btn-navigation);
   }
- .customers {
-    padding-bottom: 120px;
-    padding-top: 120px;
- }
+  /*Our team*/
 
+ .customers {
+    padding-bottom: 96px;
+    padding-top: 96px;
+ }
  .customers-list {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    gap: 24px;
  }
 
-
-
  .customers-item {
-    width: 168px;
+    /* width: 168px;
+    */
+    width: 190px;
     height: 88px;
  }
 
@@ -745,6 +774,8 @@ ul {
     border-color: var(--btn-navigation);
     color: var(--btn-navigation);
 }
+
+/*FOOTER*/
 .footer-soc {
     margin-left: 120px;
 }
@@ -1183,3 +1214,78 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
         color: #2E2F42;
     }
 }*/
+@media screen and (min-width:420px) {
+    .container {
+        width: 420px;
+    }
+
+    /*our team*/
+    /*customers*/
+
+
+}
+
+@media screen and (min-width:768px) {
+    .container {
+        width: 768px;
+    }
+
+    /*our team*/
+    .about-list {
+        display: flex;
+        margin-bottom: 0;
+        margin-right: 0;
+        column-gap: 24px;
+        row-gap: 64px;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    /*customers*/
+    .customers-item {
+        margin-right: 24px;
+    }
+
+    .customers-item {
+        width: 168px;
+        margin-bottom: 72px;
+    }
+    .customers-item:nth-child(n+3) {
+            margin-bottom: 0;
+        }
+    .customers-item:nth-child(3n+3) {
+        margin-right: 0;}
+        
+    .customers-list {
+        
+    }
+
+}
+
+@media screen and (min-width:1199px) {
+    .container {
+        width: 1199px;
+    }
+
+    /*our team*/
+    .about {
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
+
+    /*customers*/
+
+    .customers {
+        padding-bottom: 120px;
+        padding-top: 120px;
+    }
+
+    .customers-list {
+       gap: 24px;
+    }
+
+    .customers-item {
+        width: 168px;
+        margin-right: 0;
+    }
+}
