--- a/css/style.css
+++ b/css/style.css
@@ -1126,9 +1126,9 @@ ul {
     /* margin-left: 80px; */
 }
 
-.subckribe-buttom {
-    /* display: flex;
-    gap: 24px; */
+.subckribe-form {
+    /* display: flex; */
+    /* gap: 24px; */
 }
 
 .subscribe-text {
@@ -1152,11 +1152,19 @@ ul {
 }
 
 .subscribe-icon-sp {
+    /* display: inline-block; */
     position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    
+    /* align-items: center; */
+    /* justify-content: center; */
+    /* text-align: center; */
 }
 
 .subscribe-buttom {
-    display: flex;
+    display: inline-block;
+    
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
@@ -1174,6 +1182,7 @@ ul {
     padding-top: 8px;
     padding-bottom: 8px;
     padding-left: 24px;
+    padding-right: 64px;
 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1185,8 +1194,9 @@ ul {
 
 .subscribe-icon {
     position: absolute;
-    top: 10px;
+    top: 50%;
     right: 24px;
+    translate: 0 -50%;
 }
 /*Адаптивная верстка*/
 
@@ -1198,11 +1208,9 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
     }
 } */
 @media screen and (min-width:320px) and (max-width: 767px) {
+    
     /*customers*/
-    .customers {
-        padding-right: 108px;
-        padding-left: 108px;
-    }
+    
     .customers-list {
         display: flex;
         flex-wrap: wrap;
@@ -1223,13 +1231,21 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
         .customers-item:nth-child(6) {
                  margin-bottom: 0;
             }  */
+            /*subskribe*/
+            .subscribe-buttom {
+                margin-top: 16px;
+                
+            }
 }
 
 @media screen and (min-width:320px) {
     .container {
         width: 420px;
+        /*width: 100%;
+        margin:0 auto;*/
     }
     /*our team*/
+    
     /*customers*/ 
     .customers {
         padding-top: 92px;
@@ -1257,7 +1273,10 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
         /* FOOTER*/
 
         /*subskribe*/
-
+        .subscribe {
+           margin-top: 72px;
+            
+        }
 }
 
 @media screen and (min-width:768px) {
@@ -1307,13 +1326,20 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
    /*footer*/
    .footersec {
        display: flex; 
+       flex-wrap: wrap;
+       justify-content: center;
+      
+   }
+   .footersoc-text {
+      
+       text-align: start;
    }
 
                 /*subskribe*/
-    .subscribe{
-            display: inline-block;}
-    .subckribe-buttom {
-       display: flex;
+    /* .subscribe{
+            display: inline-block;} */
+    .subckribe-form {
+        display: flex; 
        gap: 24px; 
     }
     .subscribe-input {
@@ -1333,7 +1359,6 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
     }
 
     /*customers*/
-
     .customers {
         padding-bottom: 120px;
         padding-top: 120px;
@@ -1342,11 +1367,10 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
         width: 168px;
         margin-right: 0;
     } 
-     .customers-item:nth-child(2n+2) {
+     /* .customers-item:nth-child(2n+2) {
         margin-right: 0;
-    }
+    } */
     .customers-list {
-        
        gap: 24px;
     } 
     /* .customers-item {
@@ -1358,13 +1382,18 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
         justify-content: flex-start;
     }
     .footer-soc {
-             margin-left: 120px;  
+        margin-left: 120px;  
     }
      /*subskribe*/
     .subscribe {
          margin-left: 80px; 
          margin-top: 0;
     }
+    .subckribe-form {
+        display: flex; 
+         gap: 24px; 
+    }
+
 
 
  }
