--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ ul {
     text-decoration: none;
 }
 .container {
-    /* / width: 1158px;*/ 
+    /* / width: 1158px;  */
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
@@ -135,23 +135,15 @@ ul {
 .contact-adress:focus {
     color: var(--btn-navigation);
 }
-/* @media  screen and (min-width: 428px ) {
-    .container {
-        width: 428px;
-        padding-right: 15px;
-        padding-left: 15px;
-       
-    }
-    
-}
-@media screen and (max-width: 767px){
+
+/* @media screen and (max-width: 767px){
     .navigation-list {
         display: none;
     }
     .contacts {
         display:none;
-    } 
-}*/
+    }  */
+
 /* фокус для таба на интерактинвные элементы)*/
 /* Main */
 /* Section hero*/
@@ -159,46 +151,39 @@ ul {
 
 .hero-main{ 
     background: var(--maintext-color);
-    text-align: center;
+    /* text-align: center;
     padding-top:188px  ;
-    padding-bottom: 188px; 
-    
-}
-@media screen and (min-width:420px){
-    .container {
-        /* width: 100%; */
-    }
-    .hero-main {
-        padding-top: 120px;
-    padding-left: 56px;
-    padding-right: 54px;
+    padding-bottom: 188px;  */
+    padding-right: 42px;
+    padding-left: 42px;
+    text-align: center;
+    padding-top: 112px;
     padding-bottom: 112px;
-    }
+    
 
-    .hero-text {
-        font-size: 36px;
-    }
 }
-@media  screen and  (min-width: 768px) {
+
+/* @media  screen and  (min-width: 768px) {
  .container {
     width: 768px;
  }
- .hero-main {
+ /* .hero-main {
     padding: 112px 137px;
- }
-}
+ } */
+ 
 
 .hero-text {
     font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
-
+    /* width: 318px; */
     margin-top: 0;
-    margin-bottom: 48px;
-    padding-right: 317px;
-    padding-left: 317px;
+    margin-bottom: 72px;
+    /* margin-bottom: 48px; */
+    /* padding-right: 317px;
+    padding-left: 317px; */
 
-    text-align: center;
+    text-align: start;
     justify-content: center;
     color: var(--main-color);
    
@@ -273,7 +258,7 @@ ul {
 .tehnology-item:last-child {
     margin-right: 0;
 }
- @media screen and (min-width:420px)  {
+ /* @media screen and (min-width:420px)  {
 .container {
         width: 428px;
     }
@@ -340,7 +325,7 @@ ul {
         font-weight: 500;
         font-size: 20px;
     } 
-}
+} */
 
 /* section work*/
 
@@ -1207,8 +1192,25 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
         background-image: url(-desctop);
     }
 } */
+@media screen  and (max-width: 1199px){
+    .work {
+        display: none;
+    }
+}
 @media screen and (min-width:320px) and (max-width: 767px) {
+    /*header*/
+
+    /*hero*/
+    .hero-main {
+        padding-bottom: 112px;
+    }
+    .navigation-list {
+            display: none;
+    }
     
+    .contacts {
+            display: none;
+    }
     /*customers*/
     
     .customers-list {
@@ -1221,24 +1223,22 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
     .customers-item {
         flex-basis: calc((100% - 16px)/2);
     }
-    /* .customers-item:nth-child(2n+2) {
-            margin-right: 0;
-        }
+
+    /*subskribe*/
+    .subscribe-buttom {
+        margin-top: 16px;
+    }
     
-        .customers-item:nth-child(5) {
-                margin-bottom: 0;
-            }
-        .customers-item:nth-child(6) {
-                 margin-bottom: 0;
-            }  */
-            /*subskribe*/
-            .subscribe-buttom {
-                margin-top: 16px;
-                
-            }
+   
 }
 
 @media screen and (min-width:320px) {
+    /*hero*/
+    .hero-text {
+        font-size: 36px;
+        padding-left: 36px;
+        padding-right: 34px;
+    }
     .container {
         width: 420px;
         /*width: 100%;
@@ -1254,9 +1254,6 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
     .customers-item {
         display: flex;
         width: 168px; 
-        /* margin-right: 24px; */
-        
-        /* margin-bottom: 72px; */
     }
     /* .customers-item:nth-child(-2n) {
             margin-right: 24px;
@@ -1270,20 +1267,29 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
     .customers-item:nth-child(6) {
              margin-bottom: 0;
         } */
-        /* FOOTER*/
+    /* FOOTER*/
 
-        /*subskribe*/
-        .subscribe {
-           margin-top: 72px;
-            
-        }
+    /*subskribe*/
+    .subscribe {
+        margin-top: 72px;
+    }
 }
 
 @media screen and (min-width:768px) {
     .container {
         width: 768px;
     }
-
+    /*hero*/
+    .hero-main {
+        padding-bottom: 108px;
+    }
+    .hero-text {
+        font-size: 56px;
+        margin-bottom: 40px;
+        text-align: center;
+        padding-left: 121px;
+        padding-right: 121px;
+    }
     /*our team*/
     .about-list {
         display: flex;
@@ -1331,13 +1337,10 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
       
    }
    .footersoc-text {
-      
        text-align: start;
    }
 
                 /*subskribe*/
-    /* .subscribe{
-            display: inline-block;} */
     .subckribe-form {
         display: flex; 
        gap: 24px; 
@@ -1351,6 +1354,18 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
     .container {
         width: 1199px;
     }
+
+    /*hero*/
+    .hero-main {
+        text-align: center;
+        padding-top:188px  ;
+        padding-bottom: 188px; 
+    }
+    .hero-text { 
+        margin-bottom: 48px;
+        padding-right: 317px;
+        padding-left: 317px;
+    } 
 
     /*our team*/
     .about {
