--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,11 @@ ul {
     padding-bottom: 24px;
     border-bottom: 1px solid var(--bord-color);
 }
-
+.main-nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .navigation {
     display: flex; 
  }
@@ -86,8 +90,8 @@ ul {
 
 .navigation-list { 
     display: flex ;
-    margin-left: 76px;
-    margin-right: 332px;
+    /* margin-left: 76px;
+    margin-right: 332px; */
 }
 
 .navigation-item {
@@ -111,7 +115,7 @@ ul {
 }
 
 .contacts {    
-    display: flex;
+    /* display: flex; */
 }
 
 .navigation-contacts{
@@ -145,9 +149,7 @@ ul {
     }  */
 
 /* фокус для таба на интерактинвные элементы)*/
-/* Main */
 /* Section hero*/
-/*.hero {}*/
 
 .hero-main{ 
     background: var(--maintext-color);
@@ -159,18 +161,7 @@ ul {
     text-align: center;
     padding-top: 112px;
     padding-bottom: 112px;
-    
-
 }
-
-/* @media  screen and  (min-width: 768px) {
- .container {
-    width: 768px;
- }
- /* .hero-main {
-    padding: 112px 137px;
- } */
- 
 
 .hero-text {
     font-weight: 700;
@@ -182,11 +173,9 @@ ul {
     /* margin-bottom: 48px; */
     /* padding-right: 317px;
     padding-left: 317px; */
-
     text-align: start;
     justify-content: center;
     color: var(--main-color);
-   
 }
 
 .hero-buttom {
@@ -220,10 +209,10 @@ ul {
     background-color: var(--btn-navigation);
 }
 
-/* Section tefnology*/
+/* Section tehnology*/
 
 .tehnology {
-    padding-top: 120px;
+    padding-top: 96px;
 }
 
 .tehhology-maintext {
@@ -238,7 +227,6 @@ ul {
     margin-bottom: 8px;
 }
 .tehnology-text {
-     
 }
 
 .tehnology-paragraph {
@@ -253,80 +241,11 @@ ul {
 .tehnology-item {
     /*margin-right: 24px; 
     width: 264px; */
-    padding-top: 72px;
+    /* padding-top: 72px; */
 }
 .tehnology-item:last-child {
     margin-right: 0;
 }
- /* @media screen and (min-width:420px)  {
-.container {
-        width: 428px;
-    }
-    .tehnology {
-        margin: 0 auto;
-    }
-        
-    .tehnology-item {
-    }
-    .tehnology-text {
-        font-weight: 700;
-        font-size: 36px;
-        text-align: center;
-    }
-        
-}
-@media screen and (min-width: 768px) {
-    .container {
-        width: 767px;
-    }
-    .tehnology {
-        width: 768px;
-        margin: 0 auto;
-    }
-    .tehnology-list {
-        display: flex;
-        flex-wrap: wrap;
-        margin: ;
-    }
-    .tehnology-item {
-       width: calc((100% - 2 * 10px) / 2 );
-       margin: 5px;
-    }
-
-    .tehnology-text {
-        font-weight: 700;
-        font-size: 36px;
-        text-align: start;
-    }
-    
-
-}
-@media screen and (min-width: 1200px){
-    .container {
-        width: 1199px;
-    }
-    .tehnology {
-        width: 1199px;
-        margin: 0 auto;
-    }
-    .texnology-list {
-        display: flex;
-        
-    }
-    .tehnology-item {
-        width: 264px;
-        margin-right: 24px;
-    }
-    .tehnology-item:last-child {
-        margin-right: 0;
-    }
-    
-    .tehnology-text {
-        font-weight: 500;
-        font-size: 20px;
-    } 
-} */
-
 /* section work*/
 
 .work {
@@ -357,37 +276,7 @@ ul {
 .work-item {
     height: 100%;
 }
-/* @media screen and (min-widht: 428px) {
-    .container {
-        width: 428px;
-    }
-    
-}
-@media screen and (min-width: 768px) {
-    .container {
-        width: 768px;
-        
-    }
-    .work-item {
-        width: calc((100%-30px) / 2)
-    }
-}
-
-@media screen and (min-width: 1200px){
-    .work {
-        padding-top: 120px;
-        padding-bottom: 120px;
-    }
-    .container {
-        width: 1200px;
-    }
-    .work-item{
-        width: calc((100%-30px) /2);
-    }
-} */
-
 /*.work-link {}*/
-
 /*section our team - about*/
 
 .about {
@@ -436,8 +325,8 @@ ul {
 /*.portfolio-hero {}*/
 
 .portfolio-navigation {
-    padding-bottom: 72px;
-    padding-top: 92px;
+    /* padding-bottom: 72px;
+    padding-top: 92px; */
 }
 
 .portfolio-navigation-list {
@@ -508,7 +397,7 @@ ul {
 .app-item {
     
     width: 360px;
-    margin-right: 24px;
+    /* margin-right: 24px; */
     margin-bottom: 48px ;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -544,16 +433,6 @@ ul {
     margin-bottom: 32px;
     padding-left: 16px;
 }
-/**flexbox**/
-
- 
-
- .main-nav {
-    display: flex;
-    align-items: center;
-    justify-content: center;
- }
- 
  /* Fon */
 
  .overlay{
@@ -1196,21 +1075,44 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
     .work {
         display: none;
     }
+    /*tehnology*/
+    .tehnology-item::before {
+        display: none;
+    }
+    .tehnology-text {
+        font-weight: 700;
+        font-size: 36px;
+        text-align: center;
+    }
 }
 @media screen and (min-width:320px) and (max-width: 767px) {
     /*header*/
+     .navigation-list {
+        display: none;
+    }
+    
+    .contacts {
+        display: none;
+    }
 
     /*hero*/
     .hero-main {
         padding-bottom: 112px;
     }
-    .navigation-list {
-            display: none;
+    /*tehnology*/
+    .tehnology {
+        padding-bottom: 96px;
     }
+    .tehnology-list {
+            display: grid;
+            gap: 72px;
+        }
     
-    .contacts {
-            display: none;
-    }
+    .tehnology-item {
+            /* padding-bottom: 72px;
+             */
+        }
+   
     /*customers*/
     
     .customers-list {
@@ -1228,11 +1130,19 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
     .subscribe-buttom {
         margin-top: 16px;
     }
+
     
-   
+    /*PORTFOLIO*/
+    .portfolio-navigation{
+        padding-bottom: 48px;
+    }
+    .app-item:last-child {
+        margin-bottom: 0px;
+    }
 }
 
 @media screen and (min-width:320px) {
+
     /*hero*/
     .hero-text {
         font-size: 36px;
@@ -1245,6 +1155,11 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
         margin:0 auto;*/
     }
     /*our team*/
+    /*tehnology*/
+    .tehnology {
+        padding-bottom: 96px;
+    }
+    
     
     /*customers*/ 
     .customers {
@@ -1273,11 +1188,29 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
     .subscribe {
         margin-top: 72px;
     }
+    /*Portfolio*/
+    .portfolio-navigation {
+        padding-top: 48px;
+        padding-bottom: 48px;
+    }
+    /* .app-item:last-child{
+        margin-bottom: 0px;
+    }
+     */
 }
 
 @media screen and (min-width:768px) {
     .container {
         width: 768px;
+    }
+    /*header*/
+    .header {
+        padding-bottom: 10px;
+    }
+    
+    .navigation-list {
+        margin-left: 123px;
+        margin-right: 118px;
     }
     /*hero*/
     .hero-main {
@@ -1290,6 +1223,25 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
         padding-left: 121px;
         padding-right: 121px;
     }
+    /*tehnology*/
+
+    .tehnology-list {
+             display: flex;
+             flex-wrap: wrap;
+             gap: 24px;
+             row-gap: 72px;
+         }
+    
+         .tehnology-item {
+             width: calc((100% - 2 * 12px) / 2);
+         }
+    
+         .tehnology-text {
+             font-weight: 700;
+             font-size: 36px;
+             text-align: start;
+         }
+
     /*our team*/
     .about-list {
         display: flex;
@@ -1347,14 +1299,39 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
     }
     .subscribe-input {
        width: 264px; }
-
+       
+      /* portfolio*/
+    .portfolio-navigation {
+        padding-top: 64px;
+        padding-bottom: 96px;
+    }
+    .app-list {
+        justify-content: space-between;
+        flex-wrap: wrap;
+     }
+    .app-item {
+        width: 356px; 
+    }
+   
 }
 
 @media screen and (min-width:1199px) {
     .container {
         width: 1199px;
     }
-
+    /*header*/
+    .contacts {
+        display: flex;
+    }
+    
+    .navigation-list {
+        margin-left: 76px;
+        margin-right: 332px;
+    }
+    
+    .header {
+        padding-bottom: 24px;
+    }
     /*hero*/
     .hero-main {
         text-align: center;
@@ -1366,6 +1343,28 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
         padding-right: 317px;
         padding-left: 317px;
     } 
+    /*tehnology*/
+    .tehnology {
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
+    
+    .texnology-list {
+        display: flex;
+    }
+    
+    .tehnology-item {
+        width: calc((100% - 6 * 12px) / 4);
+    }
+    
+    .tehnology-item:last-child {
+        margin-right: 0;
+    }
+    
+    .tehnology-text {
+        font-weight: 500;
+        font-size: 20px;
+    }
 
     /*our team*/
     .about {
@@ -1401,15 +1400,24 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
     }
      /*subskribe*/
     .subscribe {
-         margin-left: 80px; 
-         margin-top: 0;
+        margin-left: 80px; 
+        margin-top: 0;
     }
     .subckribe-form {
         display: flex; 
-         gap: 24px; 
+        gap: 24px; 
     }
 
-
+/*portfolio*/
+    .portfolio-navigation {
+        padding-top: 72px;
+        padding-bottom: 120px;
+    }
+    .app-item {/*{flex-basis: calc((100% - 2*24px)/3);  */
+    width: 360px;
+    }
 
  }
+ 
+ 
    
