--- a/css/style.css
+++ b/css/style.css
@@ -1055,16 +1055,144 @@ ul {
 }
 
 /*mobile menu*/
-.menu-open-burger{
+
+.burger {
+
+}
+.menu-open {
+    width: 32px;
+    height: 22px;
+    border: none;
+    background-color: transparent;
+}
+.menu-open-icon{
+    stroke: var(--maintext-color);
+}
+.container-mob {
+    max-width: 428px;
+    margin: 0 auto;
+    height: 796px;
 
 }
 .mob-menu {
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #fff;
+    padding: 40px;
+    overflow: auto;
+
 
 }
 .menu-close {
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: #E7E9FC;
+    margin-bottom: 16px;
 }
 
+.menu-close-icon {
+   
+}
+.mob-menu > .container-mob {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: auto;
+}
+
+.mob-list {
+    margin-bottom: 60px;
+}
+.mob-item:not(:last-child) {
+   margin-bottom: 40px;
+}
+.mob-link {
+    display: block;
+    font-weight: 700;
+    font-size: 36px;
+    line-height:1.1;
+    letter-spacing: 0.02em;
+    color: #434455;
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-link:hover,
+.mob-link:focus {
+    color: #404BBF;
+}
+.mob-burger-contacts {
+
+}
+.mob-contacts-tel {
+
+}
+.mob-contact-tel-link{
+    display: inline-block;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 1.1;
+    line-height: 1.2em;
+    color: #434455;
+    margin-bottom:40px ;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-contact-tel-link:focus,
+.mob-contact-tel-link:hover {
+    color: #4D5AE5;
+}
+
+
+.mob-contacts {
+    margin-bottom: 48px;
+}
+.mob-contact-adress-link{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+.mob-contact-adress-link:hover,
+.mob-contact-adress-link:focus {
+    color:#4D5AE5;
+}
+.mob-soc-list {
+    display: flex;
+   
+}
+.mob-soc-item{
+    height: 40px;
+    width: 40px;
+}
+.mob-soc-item:not(:last-child){
+    margin-right: 56px;
+}
+.mob-soc-link {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: var(--violet-color);
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-soc-link:hover,
+.mob-soc-link:focus{
+    background: var(--btn-navigation);
+}
 /*Адаптивная верстка*/
 
 /* @media screen and (min-device-pixel-ratio: 2) and (min-widht: 1200px),
@@ -1184,14 +1312,14 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
         padding-bottom: 48px;
     }
     /*images*/
-        @media (min-device-pixel-ratio: 2),
-        (min-resolution: 192dpi),
-        (min-resolution: 2dppx) {
-            .overlay {
-                background-image: var(--linear-gradient),
-                    url(../images/hero-bg-mob-2x.jpg);
-            }
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .overlay {
+        background-image: var(--linear-gradient),
+        url(../images/hero-bg-mob-2x.jpg);
         }
+    }
     
 }
 
