--- a/css/style.css
+++ b/css/style.css
@@ -1057,7 +1057,8 @@ ul {
 /*mobile menu*/
 
 .burger {
-
+    display: block;
+    margin-left: auto;
 }
 .menu-open {
     width: 32px;
@@ -1072,7 +1073,6 @@ ul {
     max-width: 428px;
     margin: 0 auto;
     height: 796px;
-
 }
 .mob-menu {
     position: fixed;
@@ -1082,9 +1082,6 @@ ul {
     height: 100vh;
     background-color: #fff;
     padding: 40px;
-    overflow: auto;
-
-
 }
 .menu-close {
     display: flex;
@@ -1097,11 +1094,17 @@ ul {
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: #E7E9FC;
     margin-bottom: 16px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-close:hover,
+.menu-close:focus {
+    fill: #FFFFFF;
+    background-color: #404BBF;
 }
 
-.menu-close-icon {
+/* .menu-close-icon {
    
-}
+} */
 .mob-menu > .container-mob {
     height: 100%;
     display: flex;
@@ -1269,6 +1272,7 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
     .app-item:last-child {
         margin-bottom: 0px;
     }
+       
 }
 
 @media screen and (min-width:480px) {
@@ -1465,6 +1469,14 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
         background-image: var(--linear-gradient),
         url(../images/hero-bg-tab-2x.jpg);
         }
+    }
+    /*mobile-menu-burger*/
+    .burger {
+        display: none;
+    }
+    
+    .mob-menu {
+        display: none;
     }
    
 }
