--- a/css/style.css
+++ b/css/style.css
@@ -323,14 +323,18 @@ ul {
 .portfolio-navigation {
     /* padding-bottom: 72px;
     padding-top: 92px; */
+    
 }
 
 .portfolio-navigation-list {
     display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    column-gap: 16px;
     margin-bottom: 72px;
-    align-items: center;
-    text-align: center;  
-    justify-content: center;  
+    /* align-items: center;
+    text-align: center;   */
+    
 }
 
 .portfolio-navigation-item:last-child {
@@ -391,9 +395,8 @@ ul {
     border-top-color: transparent;
 }
 .app-item {
-     /* width: calc((100% - 2*24px) / 3); */
+    /* width: calc((100% - 2*24px) / 3); */
     width: 360px;
-    /* margin-right: 24px; */
     margin-bottom: 48px ;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -404,13 +407,6 @@ ul {
 .app-item:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-/*.app-item:ntn-child(7,8,9) {
-    padding-bottom:120px;
-}*/
-
-.app-link { 
-    
-}
 
 .app-maintext {
     font-weight: 500;
@@ -419,8 +415,7 @@ ul {
     color: var(--maintext-color);
     margin-bottom: 8px;
     padding-top: 32px;
-    padding-left: 16px;
-       
+    padding-left: 16px; 
 }
 
 .app-paragraph {
@@ -447,9 +442,6 @@ ul {
  .buttom::before {
     display: flex;
     content: '';
-   /* width: ;
-    height: ;
-    background-color: ;*/
     background-size: contain;
     margin-right: 10px;
     cursor: pointer;
@@ -532,7 +524,6 @@ ul {
     justify-content: center;
     align-items: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   
   }
 
   .teamsoc-icon {
@@ -558,7 +549,6 @@ ul {
  .customers-item {
     width: 190px;
     height: 88px;
-    
  }
 
  .customers-link {
@@ -596,8 +586,6 @@ ul {
 }
 
 /*FOOTER*/
-/* Footer */
-
 .footer {
     background: var(--maintext-color);
     padding-top: 100px;
@@ -630,20 +618,17 @@ ul {
     margin-left: auto;
     text-align: start;
 }
-.footer-soc {
-     /* margin-left: 120px;  */
-}
+/* .footer-soc {
+} */
 .footersoc-text{
     padding-bottom: 16px;
     text-align: center;
 }
 .footer-logosec{
-    /* justify-content: center; */
     text-align: center;
 }
-.footersec {
-     /* display: flex;  */
-}
+/* .footersec {
+} */
 .footersoc-list {
     display: flex;
     justify-content: center;
@@ -745,7 +730,6 @@ ul {
 }
 .backdrop.is-hidden .modal {
     transform:   scale(0) ;
-     
 }
 /* scale(0)*/
 /* елемент відповідає за полоску під навігацією*/
@@ -832,7 +816,6 @@ ul {
     font-size: 12px;
     letter-spacing: 0.04em;
     color: rgba(117, 117, 117, 0.5);
-    
 }
 .form-input:focus, 
 .form-input:hover{
@@ -932,17 +915,15 @@ ul {
     background-color: #404BBF;
 }
 
-
 .form-privacy {
     margin-bottom: 24px;
 }
-.input-check {
-}
+/* .input-check {
+} */
 
 .privat-policy {
     color: var(--btn-navigation);
     margin-left: 4px;
-
 }
 .check-text {
     font-weight: 400;
@@ -962,8 +943,8 @@ ul {
     justify-content: center;
     fill: transparent;
 }
-.check-icon {
-}
+/* .check-icon {
+} */
 .input-check:checked+.check-text span {
     background-color: #404BBF;
     border: none;
@@ -974,15 +955,10 @@ ul {
 
 .subscribe {
     margin-top: 72px ;
-    
-    /* margin-left: 80px; */
 }
 
-.subckribe-form {
-    /* display: flex; */
-    /* gap: 24px; */
-   
-}
+/* .subckribe-form {
+} */
 
 .subscribe-text {
     text-align: center;
@@ -993,11 +969,8 @@ ul {
 }
 
 .subscribe-input {
-    /* width: 264px; */
-    /* width: 396px; */
     width: 100%;
     height: 40px;
-
     padding-left: 16px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
@@ -1006,14 +979,9 @@ ul {
 }
 
 .subscribe-icon-sp {
-    /* display: inline-block; */
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    
-    /* align-items: center; */
-    /* justify-content: center; */
-    /* text-align: center; */
 }
 
 .subscribe-buttom {
@@ -1101,9 +1069,7 @@ ul {
     fill: #FFFFFF;
     background-color: #404BBF;
 }
-
 /* .menu-close-icon {
-   
 } */
 .mob-menu > .container-mob {
     height: 100%;
@@ -1117,7 +1083,7 @@ ul {
     margin-bottom: 60px;
 }
 .mob-item:not(:last-child) {
-   margin-bottom: 40px;
+    margin-bottom: 40px;
 }
 .mob-link {
     display: block;
@@ -1133,12 +1099,10 @@ ul {
 .mob-link:focus {
     color: #404BBF;
 }
-.mob-burger-contacts {
-
+/* .mob-burger-contacts {
 }
 .mob-contacts-tel {
-
-}
+} */
 .mob-contact-tel-link{
     display: inline-block;
     font-weight: 600;
@@ -1450,6 +1414,12 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
         padding-top: 64px;
         padding-bottom: 96px;
     }
+         .portfolio-navigation-list {
+             display: flex;
+             flex-wrap: unset;
+             justify-content: center;
+             align-items: center;
+         }
     .app-list {
         justify-content: space-between;
         flex-wrap: wrap;
@@ -1584,6 +1554,7 @@ screen and (min-resolution: 2ddpx) and (min-widht: 1200px) {
         padding-top: 72px;
         padding-bottom: 120px;
     }
+   
     .app-item {
         width: 360px;
     }
